package org.group8project.model;

public enum TradeSignal {
    BUY, SELL, HOLD
}